--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qrcode-terminal": "^0.12.0",
     "pm2": "^5.2.0",
     "util": "^0.12.5",
-    "@vitalets/google-translate-api": "^9.2.0"
+    "@vitalets/google-translate-api": "^9.2.0",
+    "mongodb": "^5.3.0"
   }
 }
